--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -1,6 +1,4 @@
-# Introduction {#intro}
-
-You can label chapter and section titles using `{#label}` after them, e.g., we can reference Chapter \@ref(intro). If you do not manually label them, there will be automatic labels anyway, e.g., Chapter \@ref(methods).
+# Introduction
 
 Figures and tables with captions will be placed in `figure` and `table` environments, respectively.
 
@@ -8,8 +6,6 @@ Figures and tables with captions will be placed in `figure` and `table` environm
 par(mar = c(4, 4, .1, .1))
 plot(pressure, type = 'b', pch = 19)
 ```
-
-Reference a figure by its code chunk label with the `fig:` prefix, e.g., see Figure \@ref(fig:nice-fig). Similarly, you can reference tables generated from `knitr::kable()`, e.g., see Table \@ref(tab:nice-tab).
 
 ```{r nice-tab, tidy=FALSE}
 knitr::kable(
