--- a/index.Rmd
+++ b/index.Rmd
@@ -13,7 +13,7 @@ description: This is a summary of r code learned throughout several courses of m
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, class.source = "watch-out", options(scipen=999), out.width = "60%") 
+knitr::opts_chunk$set(echo = TRUE, class.source = "watch-out", options(scipen=999), out.width = "60%", comment = FALSE) 
 source("www/init.R")
 source("www/Table_Design.R")
 ```
