--- a/index.Rmd
+++ b/index.Rmd
@@ -18,11 +18,13 @@ source("www/init.R")
 source("www/Table_Design.R")
 ```
 
-# Prerequisites
+# Preface {.unnumbered}
 
-This is a *sample* book written in **Markdown**. You can use anything that Pandoc's Markdown supports, e.g., a math equation $a^2 + b^2 = c^2$.
+The following document has been prepared to have a prompt link to the code learned and used throughout several projects in the last year. As a beginner in programming, it is useful to have input accessible to avoid having to look through all repositories.
 
-The **bookdown** package can be installed from CRAN or Github:
+------------------------------------------------------------------------
+
+The **bookdown** package that has been used for this format can be installed from CRAN or Github:
 
 ```{r eval=FALSE}
 install.packages("bookdown")
@@ -30,9 +32,7 @@ install.packages("bookdown")
 # devtools::install_github("rstudio/bookdown")
 ```
 
-Remember each Rmd file contains one and only one chapter, and a chapter is defined by the first-level heading `#`.
-
-To compile this example to PDF, you need XeLaTeX. You are recommended to install TinyTeX (which includes XeLaTeX): <https://yihui.org/tinytex/>.
+To compile this example to PDF, you will need XeLaTeX. You are recommended to install TinyTeX (which includes XeLaTeX): <https://yihui.org/tinytex/>.
 
 ```{r include=FALSE}
 # automatically create a bib database for R packages
@@ -40,3 +40,5 @@ knitr::write_bib(c(
   .packages(), 'bookdown', 'knitr', 'rmarkdown'
 ), 'packages.bib')
 ```
+
+*Prepared by: Danielle Kotter*
